--- a/Landing page.html
+++ b/Landing page.html
@@ -25,11 +25,12 @@
     </div>
 
     <div class="video-container">
-        <video width="640" height="360" controls muted>
-            <source src=vid%201.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+    <video width="640" height="360" controls muted>
+        <source src="videos/vid%201.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+
 
 </body>
 </html>
