--- a/my film.html
+++ b/my film.html
@@ -27,12 +27,12 @@
     <div class="container">
         <div class="movie">
             <h2>2 Fast 2 Furious</h2>
-            <img src="C:\Users\VON\Downloads\vs\vids\p7.jpg" alt="2 Fast 2 Furious Poster">
+            <img src="p7.jpg" alt="2 Fast 2 Furious Poster">
             <p><strong>Director:</strong> John Singleton</p>
             <p><strong>Stars:</strong> Paul Walker, Tyrese Gibson</p>
             <p>A former cop teams up with an ex-convict to take down a drug lord in Miami.</p>
             <video width="560" height="315" controls>
-                <source src="C:/Users/VON/Downloads/vs/vids/f1.mp4" type="video/mp4">
+                <source src="f1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             
@@ -40,12 +40,12 @@
 
         <div class="movie">
             <h2>Pearl Harbor</h2>
-            <img src="C:\Users\VON\Downloads\vs\vids\p8.jpg" alt="Pearl Harbor Poster">
+            <img src="p8.jpg" alt="Pearl Harbor Poster">
             <p><strong>Director:</strong> Michael Bay</p>
             <p><strong>Stars:</strong> Ben Affleck, Josh Hartnett</p>
             <p>Two childhood best friends find themselves on opposite ends of a love triangle as World War II erupts.</p>
             <video width="560" height="315" controls>
-                <source src="C:/Users/VON/Downloads/vs/vids/f2.mp4" type="video/mp4">
+                <source src="f2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             
