--- a/Biography page.html
+++ b/Biography page.html
@@ -39,17 +39,17 @@
                 I am Heinrich Von Solpico, 20 years old, from Laguna. I am the firstborn child of two. Growing up, I had many interests as a kid. Back then, I was fascinated by construction toys, cars, basketball, and many other things. During my childhood, I learned how to use a computer, and it amazed me how I could play games and explore different things on it. I spent hours discovering new programs and figuring out how technology worked. I studied elementary at SSACLC, where I met my friends and truly enjoyed my school life. I loved learning new things, and school became a place where I discovered my passions. My teachers were kind and helped me improve my skills. After school, I enjoyed playing outside with my friends. We would ride bikes, play basketball, and sometimes just run around for fun. Those moments made my childhood exciting and memorable. However, despite my happy childhood, I was prone to getting sick easily. Because of this, my parents were very protective of me. They forbade me from staying outside too late, especially at night when the cold wind could make me ill. They were also very strict about the food I ate because my stomach would get upset easily. I also remember my parents and grandmother frequently scolding me because of my "kalokohan" or mischievousness. Sometimes, I got into trouble for being too playful or curious. Even with these challenges, I still had a wonderful childhood. I spent time with my family, who always took care of me. I enjoyed the simple joys of being a kid, whether it was playing, learning, or spending time at home. Looking back, my childhood was a mix of fun, learning, and challenges. It shaped me into the person I am today, and I cherish all the memories I made along the way.
             </p>
             <div class="image-gallery">
-                <a href="pic 1.jpg" title="At the Wedding">
-                    <img src="pic 1.jpg" alt="At the Wedding" width="150">
+                <a href="pics/pic 1.jpg" title="At the Wedding">
+                    <img src="pics/pic 1.jpg" alt="At the Wedding" width="150">
                 </a>
-                <a href="pic 2.jpg" title="At the Pool">
-                    <img src="pic 2.jpg" alt="At the Pool" width="150">
+                <a href="pics/pic 2.jpg" title="At the Pool">
+                    <img src="pics/pic 2.jpg" alt="At the Pool" width="150">
                 </a>
-                <a href="pic 3.jpg" title="Christmas 2014">
-                    <img src="pic 3.jpg" alt="Christmas 2014" width="150">
+                <a href="pics/pic 3.jpg" title="Christmas 2014">
+                    <img src="pics/pic 3.jpg" alt="Christmas 2014" width="150">
                 </a>
-                <a href="pic 4.jpg" title="At KidZania">
-                    <img src="pic 4.jpg" alt="At KidZania" width="150">
+                <a href="pics/pic 4.jpg" title="At KidZania">
+                    <img src="pics/pic 4.jpg" alt="At KidZania" width="150">
                 </a>
             </div>
            
