--- a/Biography page.html
+++ b/Biography page.html
@@ -61,17 +61,17 @@
                 In my teenage years, I studied junior high school at SMAN and senior high school at SPC. As I grew older, my interests started to narrow down, focusing mainly on basketball and cars. Basketball became more than just a hobby; it gave me a sense of excitement and discipline. I enjoyed competing with my friends and constantly working to improve my skills. High school was a memorable time in my life, filled with both fun and challenges. While studying, I met a lot of friends who made my teenage years exciting. We would always hang out together, whether during breaks, weekends, or after school. We shared unforgettable moments, from simple lunch breaks to school events and friendly games of basketball. Exploring new things was part of growing up, and my teenage years were the best phase of my life. I experienced the thrill of late-night conversations, weekend hangouts, and even late-night parties. One of the most unforgettable experiences I had was when I was taken to the police station at 15. I was with my friends during curfew hours, unaware that curfew was actually in place. Since I was the only minor, I was the only one taken while my friends were let go. It was a wake-up call, teaching me the importance of following rules. During this time, I also grew a strong passion for cars. I loved learning about different car models, engines, and modifications. Watching car videos and reading about vehicle performance became a daily routine for me. Eventually, I discovered my love for driving, and every time I got behind the wheel, I felt a sense of freedom and excitement. As part of my exploration, I also tried drinking alcohol and vaping. However, I quickly realized they weren’t for me, and I learned important lessons from those experiences. My worst memory happened post-pandemic when I was 17. I dislocated my knee while playing basketball, which forced me to change how I played. The injury was painful and took months of recovery, making me more cautious whenever I played sports. Despite challenges, my teenage years were filled with fun and self-discovery. Looking back, I cherish all the memories, friendships, and lessons I gained.
             </p>
             <div class="image-gallery">
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 5.jpg" title="At Ocean Park">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 5.jpg" alt="At Ocean Park" width="150">
+                <a href="pics/pic 5.jpg" title="At Ocean Park">
+                    <img src="pics/pic 5.jpg" alt="At Ocean Park" width="150">
                 </a>
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 6.jpg" title="At Ocean Park">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 6.jpg" alt="At Ocean Park" width="150">
+                <a href="pics/pic 6.jpg" title="At Ocean Park">
+                    <img src="pics/pic 6.jpg" alt="At Ocean Park" width="150">
                 </a>
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 7.jpg" title="City Night">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 7.jpg" alt="City Night" width="150">
+                <a href="pics/pic 7.jpg" title="City Night">
+                    <img src="pics/pic 7.jpg" alt="City Night" width="150">
                 </a>
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 8.jpg" title="At Mountains">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 8.jpg" alt="At Mountains" width="150">
+                <a href="pics/pic 8.jpg" title="At Mountains">
+                    <img src="pics/pic 8.jpg" alt="At Mountains" width="150">
                 </a>
             </div>
           
@@ -83,17 +83,17 @@
                 In my current college life, my interests have narrowed once again, focusing solely on cars. Due to my high school injury and the thigh surgery I had in May 2024, I can no longer play basketball the way I used to. Because of this, my passion for cars grew even more as I found new excitement in learning about them. My college life at the university has been fun because I met many new friends. However, I am not as social as I was before, as I tend to keep to myself more. Unlike in high school, where I always hung out with a big group, in college, I prefer a smaller circle of friends. I still enjoy spending time with them, but I am now more selective with who I spend my time with. As I transitioned out of my teenage years, I became more mature in my decisions. I stopped some of my bad habits and became more conscious of my lifestyle. The late-night parties that were once frequent in my teenage years have now become less important to me. Instead, I prefer late-night hangouts with close friends, especially when I am back home in the province. These moments feel more meaningful, and I appreciate them more than ever. College has also taught me how to manage my time better. Balancing academics, social life, and personal interests can be challenging, but I have learned how to prioritize what truly matters. My passion for cars has continued to grow, and I spend a lot of time researching, watching videos, and even dreaming about owning my own dream car someday. I have also started appreciating long drives, as they give me a sense of freedom and peace. Unlike high school, college has made me more independent and responsible. I have learned how to handle different challenges without relying too much on others. I have also become more careful with my choices, ensuring they align with my future goals. Even though college can be stressful, I try to enjoy every moment and make the best out of it. The friendships I have made here are special, and I hope they last a lifetime. Looking ahead, I am excited about what the future holds for me. I know that my experiences in college will shape me into a better version of myself.
             </p>
             <div class="image-gallery">
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 9.jpg" title="1st Year">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 9.jpg" alt="1st Year" width="150">
+                <a href="pics/pic 9.jpg" title="1st Year">
+                    <img src="pics/pic 9.jpg" alt="1st Year" width="150">
                 </a>
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 10.jpg" title="At La Union">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 10.jpg" alt="At La Union" width="150">
+                <a href="pics/pic 10.jpg" title="At La Union">
+                    <img src="pics/pic 10.jpg" alt="At La Union" width="150">
                 </a>
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 11.jpg" title="2nd Year 1st Sem">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 11.jpg" alt="2nd Year 1st Sem" width="150">
+                <a href="pics/pic 11.jpg" title="2nd Year 1st Sem">
+                    <img src="pics/pic 11.jpg" alt="2nd Year 1st Sem" width="150">
                 </a>
-                <a href="C:/Users/VON/Downloads/vs/pics/pic 12.jpg" title="2nd Year 2nd Sem">
-                    <img src="C:/Users/VON/Downloads/vs/pics/pic 12.jpg" alt="2nd Year 2nd Sem" width="150">
+                <a href="pics/pic 12.jpg" title="2nd Year 2nd Sem">
+                    <img src="pics/pic 12.jpg" alt="2nd Year 2nd Sem" width="150">
                 </a>
             </div>
         </section>
