--- a/Resume page.html
+++ b/Resume page.html
@@ -11,7 +11,7 @@
     <header>
         <h1>My Resume</h1>
         <div class="image-container">
-            <img src="C:/Users/VON/Downloads/vs/pics/pic 20.jpg" alt="Your Photo">
+            <img src="pics/pic 20.jpg" alt="Your Photo">
         </div>
     </header>
 
