--- a/Dump page.html
+++ b/Dump page.html
@@ -63,7 +63,7 @@
                     <img src="dump/d13.jpg" alt="Ayala Malls-Manila Bay">
                 </a>
                 <a href="dump/d16.jpg" title="University of Cordilleras">
-                    <img src=dump/d16.jpg" alt="University of Cordilleras">
+                    <img src="dump/d16.jpg" alt="University of Cordilleras">
                 </a>
             </div>
         </div>
