--- a/my tv show.html
+++ b/my tv show.html
@@ -103,7 +103,7 @@
     </div>
 
     <div class="right-links">
-        <a href="Landing%20Page.html" class="home-link">Home</a>
+        <a href="Landing page.html" class="home-link">Home</a>
         <button class="go-top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">↑</button>
     </div>
 
